# python-socket-example

./: Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
src/client/: tcp.py  udp.py
src/server/: tcp.py  udp.py
